<resources>
    <string name="app_name">CookVentory</string>

    <string name="camera">Camera</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="action_settings">Settings</string>

    <string name="tab_text_1">Top Picks</string>
    <string name="tab_text_2">Favorites</string>
    <string name="tab_text_3">Pantry</string>

    <string name="pic">Picture Resource</string>
    <string name="name">Default Title</string>
    <string name="desc">Default Description, which can be multiline and very long!  It should wrap, but not indefinitely.  This line shouldn\'t be entirely visible.</string>

    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example Permanent Filter settings -->
    <string name="pref_header_permanent_filter">Permanent Filter</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Kitchenware -->
    <string name="pref_header_kitchenware">Kitchenware</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Example settings for Language -->
    <string name="pref_header_language">Language</string>

    <!-- Example settings for Accessibility -->
    <string name="pref_header_accessibility">Accessibility</string>

</resources>
