<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.ehdus.testscan.SettingsActivity$PermanentFilterFragment"
        android:title="@string/pref_header_permanent_filter" />

    <header
        android:fragment="com.example.ehdus.testscan.SettingsActivity$NotificationFragment"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.ehdus.testscan.SettingsActivity$KitchenwareFragment"
        android:title="@string/pref_header_kitchenware" />

    <header
        android:fragment="com.example.ehdus.testscan.SettingsActivity$LanguageFragment"
        android:title="@string/pref_header_language" />

    <header
        android:fragment="com.example.ehdus.testscan.SettingsActivity$AccessibilityFragment"
        android:title="@string/pref_header_accessibility" />

</preference-headers>
