<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ehdus.testscan.MainActivity">

    <item
        android:id="@+id/action_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/camera"
        app:showAsAction="always" />

    <item
        android:title="ph1"
        android:icon="@android:drawable/list_selector_background"
        app:showAsAction="always"
        />


    <item
        android:title="@string/app_name"
        app:showAsAction="always"/>

    <item
        android:title="ph2"
        android:icon="@android:drawable/list_selector_background"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
