<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge"
    android:padding="6dip">

    <ImageView
        android:id="@+id/r_pic"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/pic"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/r_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginStart="6dip"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/r_pic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/r_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dip"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/desc"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/r_pic"
        app:layout_constraintTop_toBottomOf="@+id/r_name" />

</android.support.constraint.ConstraintLayout>